--- a/index.html
+++ b/index.html
@@ -24,23 +24,26 @@
   </head>
   <body>
     <!--START-->
-      <div class="container-fluid">
-        <div class="bg"></div>
-        <div class="bg0"></div>
-        <div class="bg2"></div>
-        <div class="bg3"></div>
-        <div class="bg4"></div>
-        <div class="bg5"></div>
-        <div class="d-flex flex-column my-5 position-absolute top-50 start-50 translate-middle">
-          <h1 class="text-white text-center ml15">
-            <span class="word">Rapunzel's</span>
-            <span class="word">Quest</span>
-          </h1>
-          <a href="panel1.html" class="justify-content-center align-self-center">
-            <button class="btn btn-lg btn-warning btn-rounded button" href="panel1.html" id="start_button" type="button">Begin Adventure</button>
-          </a>
-        </div>
+    <div class="container-fluid">
+      <div class="bg"></div>
+      <div class="bg0"></div>
+      <div class="bg2"></div>
+      <div class="bg3"></div>
+      <div class="bg4"></div>
+      <div class="bg5"></div>
+      <div class="d-flex flex-column my-5 position-absolute top-50 start-50 translate-middle">
+        <h1 class="text-white text-center ml15">
+          <span class="word">Rapunzel's</span>
+          <span class="word">Quest</span>
+        </h1>
+        <a href="panel1.html" class="justify-content-center align-self-center">
+          <button class="btn btn-lg btn-warning btn-rounded button" href="panel1.html" id="start_button" type="button">Begin Adventure</button>
+        </a>
       </div>
+    </div>
+    <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
     <!--END-->
 
     <!-- MDB -->
