--- a/panel1.html
+++ b/panel1.html
@@ -28,7 +28,7 @@
     <div class="row h-150">
         <div class="col-sm-2 d-flex flex-column justify-content-center align-items-center">
             <div class="col-sm-3 d-flex flex-column justify-content-evenly align-items-center">
-                <a class="btn w-100 h-100 btn-link btn-lg align-self-center shadow-page" href="index.html" role="button" style="background: #BA68C8;">
+                <a class="btn w-100 h-100 btn-link btn-lg align-self-center shadow-page text-white button-color" href="index.html" role="button">
                     <i class="fa fa-house text-white" aria-hidden="true" style="transform: scale(2)"></i>
                 </a>
             </div>
@@ -54,7 +54,7 @@
                             <img
                                     src="comicpanels/panel2.png"
                                     class="img-fluid hover-shadow"
-                                    alt="Los Angeles Skyscrapers"
+                                    alt=""
                             />
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                             <img
                                     src="comicpanels/panel3.png"
                                     class="img-fluid hover-shadow"
-                                    alt="Los Angeles Skyscrapers"
+                                    alt=""
                             />
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             <img
                                     src="comicpanels/panel4.png"
                                     class="img-fluid hover-shadow"
-                                    alt="Los Angeles Skyscrapers"
+                                    alt=""
                             />
                         </div>
                     </div>
@@ -109,8 +109,8 @@
             </div>
         </div>
         <div class="col-sm-2 d-flex flex-column justify-content-evenly align-items-center">
-            <div class="col-sm-3 d-flex flex-column justify-content-evenly align-items-center" onclick="playMusic()">
-                <a class="btn align-self-center text-white" href="panel2.html" role="button" style="background: #BA68C8;">
+            <div class="col-sm-3 d-flex flex-column justify-content-evenly align-items-center">
+                <a class="btn w-100 h-100 btn-link btn-lg align-self-center shadow-page text-white button-color" href="panel2.html" role="button">
                     <i class="fa fa-arrow-right" aria-hidden="true" style="transform: scale(2)"></i>
                 </a>
             </div>
