--- a/panel2.html
+++ b/panel2.html
@@ -42,7 +42,7 @@
                         <audio id="sneak" src="sound/sneak.mp3" preload="auto"></audio>
                         <button class="btn btn-outline-warning btn-rounded btn-lg shadow-custom" data-mdb-ripple-color="#000000"
                                 style="transform: scale(1.5)" type="button" onclick="document.getElementById('sneak').play();">
-                            <a href="panel3_1.html" style="color:inherit"> Sneak into the tower </a>
+                            <a href="javascript:delay('panel3_1.html')" style="color:inherit"> Sneak into the tower </a>
                         </button>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         <audio id="knifeslice" src="sound/knifeslice.mp3" preload="auto"></audio>
                         <button class="btn btn-outline-danger btn-rounded btn-lg shadow-custom" data-mdb-ripple-color="#000000"
                                 style="transform: scale(1.5)" type="button" onclick="document.getElementById('knifeslice').play();">
-                            <a href="panel3_2.html" style="color:inherit" > Fight the dragon!</a>
+                            <a href="javascript:delay('panel3_2.html')" style="color:inherit" > Fight the dragon!</a>
                         </button>
                     </div>
                 </div>
