--- a/panel3_1.html
+++ b/panel3_1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css"/>
     <title>PANEL 3_1</title>
     <!-- WEB icon -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="webicon.svg" type="image/x-icon" />
     <!-- Font Awesome -->
     <link
             rel="stylesheet"
