--- a/panel8.html
+++ b/panel8.html
@@ -25,9 +25,10 @@
 <body>
 <!--START-->
 <section class="choices gradient-dual">
-    <div class="container vh-100 d-flex flex-column justify-content-evenly align-items-center">
-        <h3>With Flynn back in the kingdom, Rapunzel is offered two choices: <br> Receive the bag of gold and settle for life, <br> or confess her love for Flynn.</h3>
+    <div class="container-fluid vh-100 d-flex flex-column justify-content-evenly align-items-center">
+
         <div class="container">
+            <h3 class="text-center">With Flynn back in the kingdom, Rapunzel is offered two choices: <br> Receive the bag of gold and settle for life, <br> or confess her love for Flynn.</h3>
             <div class="row gx-5 justify-content-center">
 
                 <div class="col-md-6 justify-content-center">
